changed the content of the file

--- a/input.html
+++ b/input.html
@@ -1,9 +1,133 @@
-<!DOCTYPE>
-<html>
-	<head>
-		<title>My Website</title>
-	</head>
-	<body>
-		Hello world...
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
+</head>
+
+<body align="center">
+	<h2>Hello, World!</h2>
+	<h3>Indian Prime Ministers List:</h3>
+	<table border="1" bordercolor="red" cellpadding="30" align="center">
+		<tr>
+			<th>Sequence</th>
+			<th>Name</th>
+			<th>From Year</th>
+			<th>To Year</th>
+		</tr>
+		<tr>
+			<td>1st</td>
+			<td>Jawaharlal Nehru</td>
+			<td>Aug 15, 1947</td>
+			<td>May 27, 1964</td>
+		</tr>
+		<tr>
+			<td>2nd</td>
+			<td>Gulzari Lal Nanda (Acting Prime Minister)</td>
+			<td>May 27, 1964</td>
+			<td>Jun 9, 1964</td>
+		</tr>
+		<tr>
+			<td>3rd</td>
+			<td>Lal Bahadur Shastri</td>
+			<td>Jun 9, 1964</td>
+			<td>Jan 11, 1966</td>
+		</tr>
+		<tr>
+			<td>4th</td>
+			<td>Gulzari Lal Nanda (Acting Prime Minister)</td>
+			<td>Jan 11, 1966</td>
+			<td>Jan 24, 1966</td>
+		</tr>
+		<tr>
+			<td>5th</td>
+			<td>Indira Gandhi</td>
+			<td>Jan 24, 1966</td>
+			<td>Mar 24, 1977</td>
+		</tr>
+		<tr>
+			<td>6th</td>
+			<td>Morarji Desai</td>
+			<td>Mar 24, 1977</td>
+			<td>Jul 28, 1979</td>
+		</tr>
+		<tr>
+			<td>7th</td>
+			<td>Charan Singh</td>
+			<td>Jul 28, 1979</td>
+			<td>Jan 14, 1980</td>
+		</tr>
+		<tr>
+			<td>8th</td>
+			<td>Indira Gandhi</td>
+			<td>Jan 14, 1980</td>
+			<td>Oct 31, 1984</td>
+		</tr>
+		<tr>
+			<td>9th</td>
+			<td>Rajiv Gandhi</td>
+			<td>Oct 31, 1984</td>
+			<td>Dec 2, 1989</td>
+		</tr>
+		<tr>
+			<td>10th</td>
+			<td>Vishwanath Pratap Singh</td>
+			<td>Dec 2, 1989</td>
+			<td>Nov 10, 1990</td>
+		</tr>
+		<tr>
+			<td>11th</td>
+			<td>Chandra Shekhar</td>
+			<td>Nov 10, 1990</td>
+			<td>Jun 21, 1991</td>
+		</tr>
+		<tr>
+			<td>12th</td>
+			<td>P.V.Narsimha Rao</td>
+			<td>Jun 21, 1991</td>
+			<td>May 16, 1996</td>
+		</tr>
+		<tr>
+			<td>13th</td>
+			<td>Atal Bihari Vajpayee</td>
+			<td>May 16, 1996</td>
+			<td>Jun 1, 1996</td>
+		</tr>
+		<tr>
+			<td>14th</td>
+			<td>H.D.Deve Gowda</td>
+			<td>Jun 1, 1996</td>
+			<td>Apr 21, 1997</td>
+		</tr>
+		<tr>
+			<td>15th</td>
+			<td>Inder Kumar Gujral</td>
+			<td>Apr 21, 1997</td>
+			<td>Mar 19, 1998</td>
+		</tr>
+		<tr>
+			<td>16th</td>
+			<td>Atal Bihari Vajpayee</td>
+			<td>Mar 19, 1998</td>
+			<td>May 22, 2004</td>
+		</tr>
+		<tr>
+			<td>17th</td>
+			<td>Manmohan Singh</td>
+			<td>May 22, 2004</td>
+			<td>May 26, 2014</td>
+		</tr>
+		<tr>
+			<td>18th</td>
+			<td>Narendra Modi</td>
+			<td>May 26, 2014</td>
+			<td>Present...</td>
+		</tr>
+	</table>
+
+</body>
+
 </html>
