--- a/input.html
+++ b/input.html
@@ -5,13 +5,33 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>My Website...</title>
+	<style media="screen">
+		h2{
+			text-align: center;
+			color: #d9bf77;
+		}
+
+		h3{
+			text-align: center;
+			color: #9c5518;
+		}
+
+		th{
+			color: #d7385e;
+		}
+
+		td{
+			color: #687466;
+		}
+
+	</style>
 </head>
 
-<body align="center">
+<body>
 	<h2>Hello, World!</h2>
 	<h3>Indian Prime Ministers List:</h3>
-	<table border="1" bordercolor="red" cellpadding="30" align="center">
+	<table border="1" bordercolor="#e9e1cc" cellpadding="30" align="center">
 		<tr>
 			<th>Sequence</th>
 			<th>Name</th>
