--- a/input.html
+++ b/input.html
@@ -6,26 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Website...</title>
-	<style media="screen">
-		h2{
-			text-align: center;
-			color: #d9bf77;
-		}
-
-		h3{
-			text-align: center;
-			color: #9c5518;
-		}
-
-		th{
-			color: #d7385e;
-		}
-
-		td{
-			color: #687466;
-		}
-
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
