--- a/input.html
+++ b/input.html
@@ -12,7 +12,7 @@
 <body>
 	<h2>Hello, World!</h2>
 	<h3>Indian Prime Ministers List:</h3>
-	<table border="1" bordercolor="#e9e1cc" cellpadding="30" align="center">
+	<table class="center"><!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
 			<th>Name</th>
