changed some styles

--- a/input.html
+++ b/input.html
@@ -11,7 +11,7 @@
 
 <body>
 	<h2>Hello, World!</h2>
-	<h3>Indian Prime Ministers List:</h3>
+	<h3>Indian Prime Minister's List:</h3>
 	<table class="center"><!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
@@ -125,7 +125,7 @@
 			<td>18th</td>
 			<td>Narendra Modi</td>
 			<td>May 26, 2014</td>
-			<td>Present...</td>
+			<td style="color:red">Present...</td>
 		</tr>
 	</table>
 
