--- a/input.html
+++ b/input.html
@@ -6,13 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>My Website...</title>
+	<!--External CSS-->
 	<link rel="stylesheet" href="style.css">
+
+	<!--Adding the favicon icon-->
+	<link rel="icon" href="favicon/favicon.ico">
 </head>
 
 <body>
 	<h2>Hello, World!</h2>
 	<h3>Indian Prime Minister's List:</h3>
-	<table class="center"><!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
+	<table class="center">
+		<!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
 			<th>Name</th>
