--- a/input.html
+++ b/input.html
@@ -133,7 +133,9 @@
 			<td style="color:red">Present...</td>
 		</tr>
 	</table>
-
+<br>
+<br>
+<a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download>Download HTML Cheet Sheet</a>
 </body>
 
 </html>
