added more git commands

--- a/input.html
+++ b/input.html
@@ -16,7 +16,7 @@
 <body>
 	<h2>Hello, World!</h2>
 	<h3>Indian Prime Minister's List:</h3>
-	<table class="center">
+	<table>
 		<!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
@@ -136,6 +136,30 @@
 	<br>
 	<br>
 	<a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download><p>Download HTML Cheet Sheet</p></a>
+	<hr>
+	<br>
+	<div class="git">
+		<h1>Git Commands:</h1>
+		<ul>
+			<li>git clone 'github repository link'</li>
+			<li>git add 'file name'</li>
+			<li>git add *</li>
+			<li>git commit -m 'commit message'</li>
+			<li>git commit -am 'commit message'</li>
+			<li>git status</li>
+			<li>git log</li>
+			<li>git push</li>
+			<li>git pull</li>
+			<li>git reset --hard 'hash code'</li>
+			<li>git reset --hard origin/master</li>
+			<li>git revert 'hash code'</li>
+			<li>git merge origin/master</li>
+			<li>git commit --amend --reset-author</li>
+			<li>git branch</li>
+			<li>git branch 'new branch name'</li>
+			<li>git checkout 'branch name'</li>
+		</ul>
+	</div>
 </body>
 
 </html>
