--- a/input.html
+++ b/input.html
@@ -135,7 +135,7 @@
 	</table>
 	<br>
 	<br>
-	<a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download><p>Download HTML Cheet Sheet</p></a>
+	<em><a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download><span>Download HTML Cheet Sheet</span></a></em>
 	<hr>
 	<br>
 	<div class="git">
