--- a/input.html
+++ b/input.html
@@ -153,11 +153,12 @@
 			<li>git reset --hard 'hash code'</li>
 			<li>git reset --hard origin/master</li>
 			<li>git revert 'hash code'</li>
+			<li>git fetch</li>
 			<li>git merge origin/master</li>
 			<li>git commit --amend --reset-author</li>
 			<li>git branch</li>
 			<li>git branch 'new branch name'</li>
-			<li>git checkout 'branch name'</li>
+			<li>git checkout 'branch name'</li>			
 		</ul>
 	</div>
 </body>
