--- a/input.html
+++ b/input.html
@@ -14,9 +14,18 @@
 </head>
 
 <body>
-	<h2>Hello, World!</h2>
+	<h1>Hello, World!</h1>
+	<div class="content">
+		<h3>Table of Content:</h3>
+		<ul>
+			<li><a href="#primeMinister">Indian Prime Minister list.</a></li>
+			<li><a href="#gitCommand">Git Commands.</a></li>
+		</ul>
+	</div>
+	<hr>
+	<br>
 	<h3>Indian Prime Minister's List:</h3>
-	<table>
+	<table id="primeMinister">
 		<!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
@@ -138,7 +147,7 @@
 	<em><a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download>Download HTML Cheet Sheet</a></em>
 	<hr>
 	<br>
-	<div class="git">
+	<div class="gitCommand" id="gitCommand">
 		<h1>Git Commands:</h1>
 		<ul>
 			<li>git clone 'github repository link'</li>
@@ -158,7 +167,7 @@
 			<li>git commit --amend --reset-author</li>
 			<li>git branch</li>
 			<li>git branch 'new branch name'</li>
-			<li>git checkout 'branch name'</li>			
+			<li>git checkout 'branch name'</li>
 		</ul>
 	</div>
 </body>
