added feedback form

--- a/input.html
+++ b/input.html
@@ -20,6 +20,7 @@
 		<ul>
 			<li><a href="#primeMinister">Indian Prime Minister list.</a></li>
 			<li><a href="#gitCommand">Git Commands.</a></li>
+			<li><a href="#formDetails">Your Feedback.</a></li>
 		</ul>
 	</div>
 	<hr>
@@ -169,6 +170,11 @@
 			<li>git branch 'new branch name'</li>
 			<li>git checkout 'branch name'</li>
 		</ul>
+	</div>
+	<hr>
+	<br>
+	<div id="formDetails">
+		<em><a href="form.html">Your Feedback</a></em>
 	</div>
 </body>
 
