made some changes to form styling

--- a/form.html
+++ b/form.html
@@ -24,28 +24,28 @@
         <label>Comment:</label>
       </div>
       <div>
-        <textarea name="comment" rows="8" cols="50" placeholder="your comment"></textarea>
+        <textarea name="comment" rows="8" cols="50" placeholder="your comment" required></textarea>
       </div>
       <br>
       <div>
         <label>Name:</label>
       </div>
       <div>
-        <input type="text" name="name" placeholder="your name">
+        <input type="text" name="name" placeholder="your name" required>
       </div>
       <br>
       <div>
         <label>Email:</label>
       </div>
       <div>
-        <input type="email" name="email" placeholder="your email">
+        <input type="email" name="email" placeholder="your email" required>
       </div>
       <br>
       <div>
         <label>Favorite Color:</label>
       </div>
       <div>
-        <input type="radio" name="color" value="red"> Red
+        <input type="radio" name="color" value="red" required> Red
         <input type="radio" name="color" value="blue"> Blue
         <input type="radio" name="color" value="green"> Green
         <input type="radio" name="color" value="other"> Other
@@ -55,7 +55,7 @@
         <label>Your Country:</label>
       </div>
       <div>
-        <input name="country" list="countries" placeholder="your country">
+        <input name="country" list="countries" placeholder="your country" required>
         <datalist id="countries">
           <option value="Afganistan">Afghanistan</option>
           <option value="Albania">Albania</option>
