changed the style of submit button

--- a/form.html
+++ b/form.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <div class="">
+  <div>
     <h1>Feedback Form:</h1>
   </div>
-  <form>
+  <form action="mailto:nikkisengar@gmail.com" method="post" enctype="text/plain">
     <div class="feedback">
 
       <div>
@@ -307,7 +307,7 @@
       </div>
       <br>
       <div>
-        <input type="submit" value="submit" id="btn">
+        <input type="submit" value="submit" class="btn">
       </div>
     </div>
   </form>
