added reset button

--- a/form.html
+++ b/form.html
@@ -308,6 +308,7 @@
       <br>
       <div>
         <input type="submit" value="submit" class="btn">
+        <input type="reset" value="reset" class="btn">
       </div>
     </div>
   </form>
