-added home line in form.html -added .js file

--- a/input.html
+++ b/input.html
@@ -174,7 +174,7 @@
 	<hr>
 	<br>
 	<div id="formDetails">
-		<em><a href="form.html">Your Feedback</a></em>
+		<em><a target="_blank" href="form.html">Your Feedback</a></em>
 	</div>
 </body>
 
