--- a/form.html
+++ b/form.html
@@ -11,6 +11,9 @@
 
   <!--Adding the favicon icon-->
   <link rel="icon" href="favicon/favicon.ico">
+
+  <!--Adding external javascript-->
+  <script src="DoWork.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -310,6 +313,9 @@
         <input type="submit" value="submit" class="btn">
         <input type="reset" value="reset" class="btn">
       </div>
+      <hr>
+      <br>
+      <em><a href="input.html" onclick="goBack()">Home</a></em>
     </div>
   </form>
 </body>
