-changed the placeholder in form.html -added bootstarp.min.css in form.html and input,html

--- a/form.html
+++ b/form.html
@@ -12,6 +12,10 @@
   <!--Adding the favicon icon-->
   <link rel="icon" href="favicon/favicon.ico">
 
+  <!--Adding bootstrap CSS-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <!--Adding external javascript-->
   <script src="DoWork.js" type="text/javascript"></script>
 </head>
@@ -27,21 +31,21 @@
         <label>Comment:</label>
       </div>
       <div>
-        <textarea name="comment" rows="8" cols="50" placeholder="your comment" required></textarea>
+        <textarea name="comment" rows="8" cols="50" placeholder="suggestions" required></textarea>
       </div>
       <br>
       <div>
         <label>Name:</label>
       </div>
       <div>
-        <input type="text" name="name" placeholder="your name" required>
+        <input type="text" name="name" placeholder="name" required>
       </div>
       <br>
       <div>
         <label>Email:</label>
       </div>
       <div>
-        <input type="email" name="email" placeholder="your email" required>
+        <input type="email" name="email" placeholder="email" required>
       </div>
       <br>
       <div>
@@ -58,7 +62,7 @@
         <label>Your Country:</label>
       </div>
       <div>
-        <input name="country" list="countries" placeholder="your country" required>
+        <input name="country" list="countries" placeholder="country" required>
         <datalist id="countries">
           <option value="Afganistan">Afghanistan</option>
           <option value="Albania">Albania</option>
