--- a/input.html
+++ b/input.html
@@ -9,6 +9,10 @@
 	<!--External CSS-->
 	<link rel="stylesheet" href="style.css">
 
+	<!--Adding bootstrap CSS-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 	<!--Adding the favicon icon-->
 	<link rel="icon" href="favicon/favicon.ico">
 </head>
