made some changes in the button and link styling

--- a/input.html
+++ b/input.html
@@ -22,15 +22,15 @@
 	<div class="content">
 		<h3>Table of Content:</h3>
 		<ul>
-			<li><a href="#primeMinister">Indian Prime Minister list.</a></li>
-			<li><a href="#gitCommand">Git Commands.</a></li>
-			<li><a href="#formDetails">Your Feedback.</a></li>
+			<li><a href="#primeMinister" style="text-decoration:none;">Indian Prime Minister list.</a></li>
+			<li><a href="#gitCommand" style="text-decoration:none;">Git Commands.</a></li>
+			<li><a href="#formDetails" style="text-decoration:none;">Your Feedback.</a></li>
 		</ul>
 	</div>
 	<hr>
 	<br>
-	<h3>Indian Prime Minister's List:</h3>
-	<table id="primeMinister">
+	<h3 id="primeMinister">Indian Prime Minister's List:</h3>
+	<table>
 		<!--border="1" bordercolor="#e9e1cc" cellpadding="30" align="center"-->
 		<tr>
 			<th>Sequence</th>
@@ -149,7 +149,7 @@
 	</table>
 	<br>
 	<br>
-	<em><a target="_blank" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download>Download HTML Cheet Sheet</a></em>
+	<em><a target="_blank" style="text-decoration:none;text-align:center" href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf" download>Download HTML Cheet Sheet</a></em>
 	<hr>
 	<br>
 	<div class="gitCommand" id="gitCommand">
@@ -178,8 +178,14 @@
 	<hr>
 	<br>
 	<div id="formDetails">
-		<em><a target="_blank" href="form.html">Your Feedback</a></em>
+		<em><a target="_blank" href="form.html" style="text-decoration:none;text-align:center">Your Feedback</a></em>
 	</div>
+	<br>
+	<footer>
+    <div class="alert alert-dark" role="alert">
+      <center><h6>&copy; 2020 Nikhil Sengar<h6></center>
+    </div>
+  </footer>
 </body>
 
 </html>
