--- a/form.html
+++ b/form.html
@@ -13,15 +13,14 @@
   <link rel="icon" href="favicon/favicon.ico">
 
   <!--Adding bootstrap CSS-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <!--Adding external javascript-->
   <script src="DoWork.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div>
+  <div class="alert alert-primary" role="alert">
     <h1>Feedback Form:</h1>
   </div>
   <form action="mailto:nikkisengar@gmail.com" method="post" enctype="text/plain">
@@ -314,14 +313,20 @@
       </div>
       <br>
       <div>
-        <input type="submit" value="submit" class="btn">
-        <input type="reset" value="reset" class="btn">
+        <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+        <button type="reset" class="btn btn-secondary btn-sm">reset</button>
       </div>
       <hr>
       <br>
-      <em><a href="input.html" onclick="goBack()">Home</a></em>
+      <em><a href="input.html" style="text-decoration:none;text-align:center">Home</a></em>
     </div>
   </form>
+  
+  <footer>
+    <div class="alert alert-dark" role="alert">
+      <center><h6>&copy; 2020 Nikhil Sengar<h6></center>
+    </div>
+  </footer>
 </body>
 
 </html>
