--- a/form.html
+++ b/form.html
@@ -44,8 +44,15 @@
             <div class="form-group">
               <input type="email" name="txtEmail" class="form-control" placeholder="Your Email *" value="" required />
             </div>
-            <div class="form-group">
-              <input type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" required />
+            <div class="form-row">
+              <div class="form-group  col-md-2">
+                <input type="tel" class="form-control">
+                <span class="form-group-addon"></span>
+              </div>
+              <div class="form-group col-md-10">
+                <input type="tel" pattern="[0-9]{10}" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" required />
+              </div>
+
             </div>
             <div class="form-group">
               <input name="country" list="countries" class="form-control" placeholder="Your Country *" required>
@@ -307,15 +314,15 @@
               <textarea name="txtMsg" class="form-control" placeholder="Your Message *" required style="width: 100%; height: 146px;"></textarea>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-7">
                 <input name="state" list="states" class="form-control" placeholder="Your State *" required>
                 <datalist id="states">
                   <option value="Afganistan">Afghanistan</option>
                   <option value="Albania">Albania</option>
                 </datalist>
               </div>
-              <div class="form-group col-md-6">
-                <input name="zip" list="postalCodes" class="form-control" placeholder="Your ZipCode *" required>
+              <div class="form-group col-md-5">
+                <input name="zip" list="postalCodes" class="form-control" placeholder="Your Zip *" required>
                 <datalist id="postalCodes">
                   <option value="Afganistan">Afghanistan</option>
                   <option value="Albania">Albania</option>
