initial commit to section branch

--- a/form.html
+++ b/form.html
@@ -27,9 +27,12 @@
 
 <body>
   <div class="container bg-dark">
-    <div class="alert alert-success" role="alert">
+    <!-- <div class="alert alert-success" role="alert">
       <h1 class="alert-heading">Feedback Form:</h1>
-    </div>
+    </div> -->
+    <nav class="container navbar navbar-expand-lg navbar-dark bg-dark ">
+      <h1 class="mx-auto">Feedback Form</h1>
+    </nav>
     <div class="container contact-form">
       <div class="contact-image">
         <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact" />
@@ -306,7 +309,7 @@
               </datalist>
             </div>
             <div class="form-group">
-              <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" required />
+              <input type="submit" name="btnSubmit" class="btnContact btn btn-outline-success btn-md" value="Send Message" required />
             </div>
           </div>
           <div class="col-md-6">
@@ -329,8 +332,8 @@
                 </datalist>
               </div>
             </div>
-            <div class="form-group ">
-              <input type="reset" name="btnReset" class="btnContact" value="Reset Message" required />
+            <div class="form-group">
+              <input type="reset" name="btnReset" class="btnContact btn btn-outline-dark btn-md" value="Reset Message" required />
             </div>
           </div>
         </div>
