--- a/feedback.html
+++ b/feedback.html
@@ -21,21 +21,39 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/c05988054e.js" crossorigin="anonymous"></script>
+
   <!--Adding external javascript-->
   <script src="DoWork.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div class="container bg-dark">
-    <!-- <div class="alert alert-success" role="alert">
-      <h1 class="alert-heading">Feedback Form:</h1>
-    </div> -->
-    <nav class="container navbar navbar-expand-lg navbar-dark bg-dark ">
-      <h1 class="mx-auto">Feedback Form</h1>
+  <div class="container">
+
+    <!-- Navigaton bar section -->
+    <nav class=" navbar navbar-expand-lg navbar-light bg-secondary">
+			<a href="#" class="navbar-brand text-warning">techKnowledge</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a href="techKnowledge.html" target="_blank" class="nav-link text-warning"><i class="fas fa-home"></i> Home</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+    <br>
+    <nav class="container navbar navbar-expand-lg navbar-dark">
+      <h1 class="mx-auto feedback-heading">Feedback Form</h1>
     </nav>
-    <div class="container contact-form">
+
+    <!-- Fill Feedback form section -->
+    <div class="container contact-form border">
       <div class="contact-image">
-        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact" />
+        <img class="border-top border-left-5000" src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact" />
       </div>
       <form method="post" action="mailto:nikkisengar@gmail.com" enctype="multipart/form-data">
         <h3>Drop Us a Message</h3>
@@ -340,62 +358,19 @@
       </form>
     </div>
 
-    <!--<form action="mailto:nikkisengar@gmail.com" method="post" enctype="text/plain">
-    <div class="feedback">
-
-      <div>
-        <label>Comment:</label>
+    <!-- footer section -->
+    <footer class="social-footer border text-center rounded" id="footer">
+    <div class="container-fluid">
+      <div class="social-footer-icons">
+        <a target="_blank" href="https://twitter.com/?lang=en" title="Follow Us on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.facebook.com/" title="Like Us on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.instagram.com/?hl=en" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://www.gmail.com/" title="Mail Us"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+        <a target="_blank" href="https://github.com/nikkisengar/TinDog-start" title="Github"><i class="fa fa-github" aria-hidden="true"></i></a>
       </div>
-      <div>
-        <textarea name="comment" rows="8" cols="50" placeholder="suggestions" required></textarea>
-      </div>
-      <br>
-      <div>
-        <label>Name:</label>
-      </div>
-      <div>
-        <input type="text" name="name" placeholder="name" required>
-      </div>
-      <br>
-      <div>
-        <label>Email:</label>
-      </div>
-      <div>
-        <input type="email" name="email" placeholder="email" required>
-      </div>
-      <br>
-      <div>
-        <label>Favorite Color:</label>
-      </div>
-      <div>
-        <input type="radio" name="color" value="red" required> Red
-        <input type="radio" name="color" value="blue"> Blue
-        <input type="radio" name="color" value="green"> Green
-        <input type="radio" name="color" value="other"> Other
-      </div>
-      <br>
-      <div>
-        <label>Your Country:</label>
-      </div>
-
-      <br>
-      <div>
-        <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-        <button type="reset" class="btn btn-secondary btn-sm">reset</button>
-      </div>
-      <hr>
-      <br>
-      <em><a href="input.html" id="link" class="text-center text-decoration-none">Home</a></em>
+      <p class="footer-details"><i class="fas fa-copyright"></i> Copyright 2020 <strong>techKnowledge</strong></p>
     </div>
-  </form>-->
-
-    <footer>
-      <div class="alert alert-dark mb-auto" role="alert">
-        <center>
-          <h6>&copy; 2020 Nikhil Sengar<h6>
-        </center>
-      </div>
-    </footer>
+  </footer>
   </div>
 </body>
 
