--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -61,7 +61,7 @@
 			<ul>
 				<li><a href="#learnCode" id="link"><i class="fas fa-desktop"></i> Coding For Everyone.</a></li>
 				<li><a href="#gitCommand" id="link"><i class="fab fa-github"></i> Git Commands.</a></li>
-				<li><a href="#gitCommand" id="link"><i class="fab fa-linux"></i> Linux Commands.</a></li>
+				<li><a href="#linuxCmd" id="link"><i class="fab fa-linux"></i> Linux Commands.</a></li>
 			</ul>
 		</div>
 		<br>
