+ Made the color of <em> as success in linuxCmd

--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -516,14 +516,14 @@
 						<dt class="linuxCmdHeading">$ ls -ltr</dt>
 						<dd>
 							<p>
-								 Using <em class="text-primary">ls -ltr</em>, order Files Based on Last Modified Time (In Reverse Order).
+								 Using <em class="text-success">ls -ltr</em>, order Files Based on Last Modified Time (In Reverse Order).
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ ls -F</dt>
 						<dd>
 							<p>
-								Using <em class="text-primary">ls -F</em>, visual Classification of Files With Special Characters.
+								Using <em class="text-success">ls -F</em>, visual Classification of Files With Special Characters.
 							</p>
 						</dd>
 
@@ -538,7 +538,7 @@
 				<dt class="linuxCmdHeading text-primary">pwd command</dt>
 				<dd>
 					<p>
-						<em class="text-primary">pwd</em> is Print working directory or Present working directory. What else can be said about the good old pwd who has been printing the current directory name for ages.
+						<em class="text-success">pwd</em> is Print working directory or Present working directory. What else can be said about the good old pwd who has been printing the current directory name for ages.
 					</p>
 				</dd>
 
@@ -550,14 +550,14 @@
 						<dt class="linuxCmdHeading">cd -</dt>
 						<dd>
 							<p>
-								Use <em class="text-primary">cd -</em> to toggle between the last two directories.
+								Use <em class="text-success">cd -</em> to toggle between the last two directories.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">shopt -s cdspell</dt>
 						<dd>
 							<p>
-								Use <em class="text-primary">shopt -s cdspell</em> to automatically correct mistyped directory names on cd.
+								Use <em class="text-success">shopt -s cdspell</em> to automatically correct mistyped directory names on cd.
 							</p>
 						</dd>
 
@@ -575,21 +575,21 @@
 						<dt class="linuxCmdHeading">$ gzip test.txt</dt>
 						<dd>
 							<p>
-								To create a <em class="text-primary">*.gz</em> compressed file.
+								To create a <em class="text-success">*.gz</em> compressed file.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ gzip -d test.txt.gz</dt>
 						<dd>
 							<p>
-								To uncompress a <em class="text-primary">*.gz</em> file.
+								To uncompress a <em class="text-success">*.gz</em> file.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ gzip -l *.gz</dt>
 						<dd>
 							<p>
-								Using <em class="text-primary">gzip -l</em>, display compression ratio of the compressed file.
+								Using <em class="text-success">gzip -l</em>, display compression ratio of the compressed file.
 							</p>
 						</dd>
 
@@ -603,14 +603,14 @@
 						<dt class="linuxCmdHeading">$ unzip test.zip</dt>
 						<dd>
 							<p>
-								To extract a <em class="text-primary">*.zip</em> compressed file.
+								To extract a <em class="text-success">*.zip</em> compressed file.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ unzip -l jasper.zip</dt>
 						<dd>
 							<p>
-								View the contents of <em class="text-primary">*.zip</em> file (Without unzipping it).
+								View the contents of <em class="text-success">*.zip</em> file (Without unzipping it).
 							</p>
 						</dd>
 
@@ -651,14 +651,14 @@
 						<dt class="linuxCmdHeading">$ ps -ef | more</dt>
 						<dd>
 							<p>
-								<em class="text-primary">ps</em> command is used to display information about the processes that are running in the system. While there are lot of arguments that could be passed to a ps command, following are some of the common ones. To view current running processes.
+								<em class="text-success">ps</em> command is used to display information about the processes that are running in the system. While there are lot of arguments that could be passed to a ps command, following are some of the common ones. To view current running processes.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ ps -efH | more</dt>
 						<dd>
 							<p>
-								To view current running processes in a tree structure. <em class="text-primary">H</em> option stands for process hierarchy.
+								To view current running processes in a tree structure. <em class="text-success">H</em> option stands for process hierarchy.
 							</p>
 						</dd>
 
@@ -673,21 +673,21 @@
 						<dt class="linuxCmdHeading">$ free</dt>
 						<dd>
 							<p>
-								This command is used to display the free, used, swap memory available in the system. Typical <em class="text-primary">free</em> command output. The output is displayed in bytes.
+								This command is used to display the free, used, swap memory available in the system. Typical <em class="text-success">free</em> command output. The output is displayed in bytes.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ free -g</dt>
 						<dd>
 							<p>
-								If you want to quickly check how many GB of RAM your system has use the <em class="text-primary">-g</em> option. <em class="text-primary">-b</em> option displays in bytes, <em class="text-primary">-k</em> in kilo bytes, <em class="text-primary">-m</em> in mega bytes.
+								If you want to quickly check how many GB of RAM your system has use the <em class="text-success">-g</em> option. <em class="text-success">-b</em> option displays in bytes, <em class="text-success">-k</em> in kilo bytes, <em class="text-success">-m</em> in mega bytes.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ free -t</dt>
 						<dd>
 							<p>
-								If you want to see a total memory ( including the swap), use the <em class="text-primary">-t</em> switch, which will display a total line as shown below.
+								If you want to see a total memory ( including the swap), use the <em class="text-success">-t</em> switch, which will display a total line as shown below.
 							</p>
 						</dd>
 
@@ -701,7 +701,7 @@
 						<dt class="linuxCmdHeading">$ top -u oracle</dt>
 						<dd>
 							<p>
-								<em class="text-primary">top</em> command displays the top processes in the system ( by default sorted by cpu usage ). To sort top output by any column, Press O (upper-case O) , which will display all the possible columns that you can sort by as shown below. To displays only the processes that belong to a particular user use -u option. The following will show only the top processes that belongs to oracle user.
+								<em class="text-success">top</em> command displays the top processes in the system ( by default sorted by cpu usage ). To sort top output by any column, Press O (upper-case O) , which will display all the possible columns that you can sort by as shown below. To displays only the processes that belong to a particular user use -u option. The following will show only the top processes that belongs to oracle user.
 							</p>
 						</dd>
 
@@ -720,21 +720,21 @@
 						<dt class="linuxCmdHeading">$ df -k</dt>
 						<dd>
 							<p>
-								Displays the file system disk space usage. By default <em class="text-primary">df -k</em> displays output in bytes.
+								Displays the file system disk space usage. By default <em class="text-success">df -k</em> displays output in bytes.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ df -h</dt>
 						<dd>
 							<p>
-								<em class="text-primary">df -h</em> displays output in human readable form. i.e size will be displayed in GB’s.
+								<em class="text-success">df -h</em> displays output in human readable form. i.e size will be displayed in GB’s.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ df -T</dt>
 						<dd>
 							<p>
-								Use <em class="text-primary">-T</em> option to display what type of file system.
+								Use <em class="text-success">-T</em> option to display what type of file system.
 							</p>
 						</dd>
 
@@ -750,7 +750,7 @@
 						<dt class="linuxCmdHeading"><strong>Step 2:</strong> $ kill -9 7243</dt>
 						<dd>
 							<p>
-								Use kill command to terminate a process. First get the process id using <em class="text-primary">ps -ef</em> command, then use <em class="text-primary">kill -9</em> to kill the running Linux process as shown below. You can also use <em class="text-primary">killall, pkill, xkill</em> to terminate a unix process.
+								Use kill command to terminate a process. First get the process id using <em class="text-success">ps -ef</em> command, then use <em class="text-success">kill -9</em> to kill the running Linux process as shown below. You can also use <em class="text-success">killall, pkill, xkill</em> to terminate a unix process.
 							</p>
 						</dd>
 
@@ -830,7 +830,7 @@
 						<dt class="linuxCmdHeading">$ mv -v file1 file2</dt>
 						<dd>
 							<p>
-								<em class="text-primary">mv -v</em> will print what is happening during file rename, which is useful while specifying shell metacharacters in the file name argument.
+								<em class="text-success">mv -v</em> will print what is happening during file rename, which is useful while specifying shell metacharacters in the file name argument.
 							</p>
 						</dd>
 
@@ -852,7 +852,7 @@
 						<dt class="linuxCmdHeading">$ cat -n /etc/logrotate.conf</dt>
 						<dd>
 							<p>
-								While displaying the file, following <em class="text-primary">cat -n</em> command will prepend the line number to each line of the output.
+								While displaying the file, following <em class="text-success">cat -n</em> command will prepend the line number to each line of the output.
 							</p>
 						</dd>
 
@@ -866,7 +866,7 @@
 						<dt class="linuxCmdHeading">$ chmod ug+rwx file.txt</dt>
 						<dd>
 							<p>
-								<em class="text-primary">chmod</em> command is used to change the permissions for a file or directory. Give full access to user and group (i.e read, write and execute ) on a specific file.
+								<em class="text-success">chmod</em> command is used to change the permissions for a file or directory. Give full access to user and group (i.e read, write and execute ) on a specific file.
 							</p>
 						</dd>
 
@@ -898,14 +898,14 @@
 						<dt class="linuxCmdHeading">$ chown oracle:dba dbora.sh</dt>
 						<dd>
 							<p>
-								<em class="text-primary">chown</em> command is used to change the owner and group of a file. To change owner to oracle and group to db on a file. i.e Change both owner and group at the same time.
+								<em class="text-success">chown</em> command is used to change the owner and group of a file. To change owner to oracle and group to db on a file. i.e Change both owner and group at the same time.
 							</p>
 						</dd>
 
 						<dt class="linuxCmdHeading">$ chown -R oracle:dba /home/oracle</dt>
 						<dd>
 							<p>
-								Use <em class="text-primary">-R</em> to change the ownership recursively.
+								Use <em class="text-success">-R</em> to change the ownership recursively.
 							</p>
 						</dd>
 
@@ -926,7 +926,7 @@
 						<dt class="linuxCmdHeading">$ mkdir -p dir1/dir2/dir3/dir4/</dt>
 						<dd>
 							<p>
-								Create nested directories using one <em class="text-primary">mkdir</em> command. If any of these directories exist already, it will not display any error. If any of these directories doesn’t exist, it will create them.
+								Create nested directories using one <em class="text-success">mkdir</em> command. If any of these directories exist already, it will not display any error. If any of these directories doesn’t exist, it will create them.
 							</p>
 						</dd>
 
@@ -940,7 +940,7 @@
 						<dt class="linuxCmdHeading">$ locate crontab</dt>
 						<dd>
 							<p>
-								Using <em class="text-primary">locate</em> command you can quickly search for the location of a specific file (or group of files). Locate command uses the database created by updatedb. The example below shows all files in the system that contains the word crontab in it.
+								Using <em class="text-success">locate</em> command you can quickly search for the location of a specific file (or group of files). Locate command uses the database created by updatedb. The example below shows all files in the system that contains the word crontab in it.
 							</p>
 						</dd>
 
@@ -989,7 +989,7 @@
 						<dt class="linuxCmdHeading">$ tail -f log-file</dt>
 						<dd>
 							<p>
-								Using <em class="text-primary">tail -f</em>, view the content of the file in real time. This is useful to view the log files, that keeps growing. The command can be terminated using CTRL-C.
+								Using <em class="text-success">tail -f</em>, view the content of the file in real time. This is useful to view the log files, that keeps growing. The command can be terminated using CTRL-C.
 							</p>
 						</dd>
 
@@ -1007,7 +1007,7 @@
 						<dt class="linuxCmdHeading">$ su - USERNAME</dt>
 						<dd>
 							<p>
-								Switch to a different user account using <em class="text-primary">su</em> command. Super user can switch to any other user without entering their password.
+								Switch to a different user account using <em class="text-success">su</em> command. Super user can switch to any other user without entering their password.
 							</p>
 						</dd>
 
