+ Corrected find command under linuxCmd

--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -422,7 +422,7 @@
 							</p>
 						</dd>
 
-						<dt class="linuxCmdHeading">$ find -iname "MyCProgram.c" -exec md5sum {} \;</dt>
+						<dt class="linuxCmdHeading">$ find -iname "MyCProgram.c" -exec md5sum {} \</dt>
 						<dd>
 							<p>
 								Execute commands on files found by the find command.
