--- a/techKnowledge.html
+++ b/techKnowledge.html
@@ -34,7 +34,10 @@
 <body>
 	<div class="container">
 		<nav class=" navbar navbar-expand-lg navbar-light bg-secondary">
-			<a href="#" class="navbar-brand text-warning">techKnowledge</a>
+			<a href="#" class="navbar-brand text-warning">
+				techKnowledge
+				<!-- <img class="logo" src="images/techKnowledge5.png" alt="techKnowledge logo" /> -->
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
